--- a/_posts/2025-03-07-Pertemuan-2.md
+++ b/_posts/2025-03-07-Pertemuan-2.md
@@ -1,9 +1,10 @@
 ---
 layout: post
 tittle: Pertemuan 2
+description : Membuat Web Pribadi Pakai Jekyll + GitHub
 ---
 
-## Pertemuan 1  
+## Pertemuan 2  
 **Tanggal:** 07 Maret 2025  
 📝       **:** Jelita Anggraini 
 
