--- a/_posts/2025-02-21-Pertemuan-1.md
+++ b/_posts/2025-02-21-Pertemuan-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Pertemuan 1
+title: Pertemuan 1 - Pengenalan Instalasi Ruby dan Jekyll
 description :  Pengenalan Instalasi Ruby dan Jekyll
 ---
 
