--- a/_posts/2025-03-07-Pertemuan-2.md
+++ b/_posts/2025-03-07-Pertemuan-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-tittle: Pertemuan 2
+title: Pertemuan 2 - Membuat Web Pribadi Pakai Jekyll + GitHub
 description : Membuat Web Pribadi Pakai Jekyll + GitHub
 ---
 
