--- a/_posts/2025-03-14-pertemuan-3.md
+++ b/_posts/2025-03-14-pertemuan-3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-tittle: Pertemuan 3
+title: Pertemuan 3 - Menulis Post di Jekyll dengan Markdown
 description: Menulis Post di Jekyll dengan Markdown
 ---
 
