--- a/_posts/2025-04-24-pertemuan-5.md
+++ b/_posts/2025-04-24-pertemuan-5.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-tittle: Pertemuan 5
+title: Pertemuan 5 - JavaScript dan _config.yml
 description: JavaScript dan _config.yml
 ---
 
