--- a/_posts/2025-05-16-pertemuan-6.md
+++ b/_posts/2025-05-16-pertemuan-6.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Pertemuan 6
+title: Pertemuan 6 - Menambahkan Profil ke Folder `_students` di GitHub
 description: Cara Menambahkan File ke Folder _students di GitHub
 ---
 
