--- a/_posts/2025-05-23-pertemuan-7.md
+++ b/_posts/2025-05-23-pertemuan-7.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Pertemuan 7
+title: Pertemuan 7 - Cara Mengisi Postingan Blog di Folder _posts
 description: Cara Mengisi Postingan Blog di Folder _posts
 ---
 
