--- a/_posts/2025-06-13-pertemuan-8.md
+++ b/_posts/2025-06-13-pertemuan-8.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Pertemuan 8
+title: Pertemuan 8 -  Membuat Form Pendaftaran Siswa dengan PHP dan MySQL
 description: Membuat Form Pendaftaran Siswa dengan PHP dan MySQL
 ---
 
