--- a/_posts/2025-06-20-pertemuan-9.md
+++ b/_posts/2025-06-20-pertemuan-9.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Pertemuan 9
+title: Pertemuan 9 - Membuat Form Pendaftaran Siswa dengan PHP dan MySQL
 description: Mengumpulkan Tugas via GitHub Classroom
 ---
 
